Opened 15 years ago
Closed 15 years ago
#755 closed defect (fixed)
zzufed mtv file crashes ffmpeg_g
| Reported by: | Diana Muscalu | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | mtv, FPE |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Program received signal SIGFPE, Arithmetic exception.
0x00000000004baab2 in mtv_read_header (s=0x139e7a0, ap=<optimized out>)
at libavformat/mtv.c:112
112 mtv->video_fps = (mtv->audio_br / 4) / audio_subsegments;
Attachments (5)
Change History (6)
by , 15 years ago
| Attachment: | corruptfile added |
|---|
comment:1 by , 15 years ago
| Keywords: | mtv FPE added |
|---|---|
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |
Locally fixed, will be in git master soon
Note:
See TracTickets
for help on using tickets.



use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )