mtv: Fix FPE with 0 dimensions. Fixes Ticket755 Bug Found by: Diana Elena Muscalu

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 8b9b6332dfeb169098c8ab1351d66fc5b474dd55)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>